# src/routes/memetemplates.ts
@@ -8,8 +8,6 @@ import { authenticate } from "../helpers/authenticationHelpers";
 const router = express.Router();
 
 router.post("/", async (request, response) => {
-	// TODO: validate parameters
-
 	try {
 		authenticate(request.headers.authorization, request.body.username);
 
@@ -57,9 +55,7 @@ router.get("/:templateId", async (request, response) => {
 		response.status(200).json(memeTemplate);
 	} catch (error) {
 		console.error(error); // debugging
-		if (error instanceof ValidationError) {
-			response.status(400).json(error.jsonError);
-		} else if (error.name === "EntityNotFound") {
+		if (error.name === "EntityNotFound") {
 			response.status(404).end();
 		} else {
 			response.status(500).end();
